--- a/.sailsrc
+++ b/.sailsrc
@@ -1,5 +1,11 @@
 {
   "generators": {
     "modules": {}
+  },
+  "hooks": {
+    "blueprints": false,
+    "orm": false,
+    "pubsub": false,
+    "sockets": false
   }
 }
