--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parser1",
+  "name": "Parser",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "1.0.0",
+  "description": "Doctor Teu project",
   "keywords": [],
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -20,10 +20,15 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
+    "path": "^0.12.7",
     "pg": "^7.4.1",
     "rc": "1.0.1",
     "sails": "~0.12.14",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sequelize": "^4.32.5",
+    "umzug": "^2.1.0"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -32,8 +37,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/parser1.git"
+    "url": "git://github.com/AlexGSurkov/parser.git"
   },
-  "author": "anonymous node/sails user",
+  "author": "Alex G. Surkov",
   "license": ""
 }
