--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gardenize",
+  "name": "parser",
   "private": true,
   "engines": {
     "node": "8.9.4"
   },
   "version": "1.0.0",
-  "description": "Gardenize",
+  "description": "Doctor Teu",
   "keywords": [],
   "dependencies": {
     "JSONStream": "^1.3.0",
@@ -104,7 +104,7 @@
     "type": "https",
     "url": ""
   },
-  "author": "Gardenize team",
+  "author": "Alex G. Surkov",
   "license": "",
   "devDependencies": {
     "eslint": "^4.13.0",
