--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "~0.8.4",
     "event-stream": "^3.3.4",
     "exports-loader": "^0.6.2",
+    "google-maps-react": "^2.0.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
